<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/tittle_noti">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_noti"
            android:title="@string/tittle_noti_switch" />

        <Preference
            android:dependency="@string/key_noti"
            android:key="@string/key_ringtone"
            android:title="@string/tittle_ringtone"
            android:summary="@string/summary_ringtone" />

        <SwitchPreference
            android:title="@string/tittle_vibrate"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/tittle_language">

        <ListPreference
            android:key="@string/key_language"
            android:title="@string/tittle_language"
            android:dialogTitle="@string/tittle_select_language"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values"
            android:summary="@string/summary_language" >

        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/key_util"
        android:title="@string/tittle_util">

        <ListPreference
            android:key="@string/key_theme"
            android:title="@string/tittle_theme"
            android:dialogTitle="@string/tittle_select_theme"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:summary="@string/summary_theme" >

        </ListPreference>

        <Preference
            android:key="@string/key_send_feedback"
            android:title="@string/tittle_send_feedback"
            android:summary="@string/summary_feedback" />

        <Preference
            android:key="@string/key_about"
            android:title="@string/tittle_about"
            android:summary="@string/summary_about" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_about" />
        </Preference>

        <Preference
            android:key="@string/key_privacy"
            android:title="@string/tittle_privacy" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy_policy" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>