<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Update.UserProfileActivity">


    <ImageView
        android:id="@+id/backgroud_ava"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/goodmorning"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </ImageView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toTopOf="@id/Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgroud_ava">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:focusableInTouchMode="true"
            android:src="@drawable/ava"
            app:civ_border_color="#ffffff"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toTopOf="@id/change_ava"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_ava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Change your Image"
            android:textColor="@color/gradStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Image"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:scrollbarSize="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TableRow
                    android:id="@+id/txt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="#000000">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/fist_name"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/fName"
                        android:layout_width="279dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:hint="@string/fist_name_edt"
                        android:inputType="text"
                        android:lines="1"
                        android:padding="12dip"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#000000">


                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/last_name"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/lName"
                        android:layout_width="277dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:hint="@string/last_name_edt"
                        android:inputType="text"
                        android:lines="1"
                        android:padding="12dp"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#000000">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/date_of_birth"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <com.santalu.maskedittext.MaskEditText
                        android:id="@+id/birthday"
                        android:layout_width="277dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:hint="@string/date_of_birth_edt"
                        android:lines="1"
                        android:padding="12dip"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        app:met_mask="####/##/##" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#000000">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/phone"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="279dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:autofillHints="@string/phone"
                        android:gravity="start"
                        android:hint="@string/phone_edt"
                        android:lines="1"
                        android:inputType="phone"
                        android:padding="12dip"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>


                <TableRow

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#000000">


                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/email"
                        android:textColor="#000000"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="273dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:hint="@string/email_edt"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:padding="12dip"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#000000">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/nationality"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText

                        android:id="@+id/nationality"
                        android:layout_width="304dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:gravity="start"
                        android:hint="@string/nationality_edt"
                        android:inputType="text"
                        android:lines="1"
                        android:padding="12dip"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="#000000">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/country"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="282dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:hint="@string/country_edt"
                        android:inputType="text"
                        android:lines="1"
                        android:padding="12dip"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="#000000">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dip"
                        android:text="@string/city"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="273dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:hint="@string/city_edt"
                        android:inputType="text"
                        android:lines="1"
                        android:padding="12dip"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </TableRow>
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/tapBarFragment"
        android:name="vn.edu.usth.touristtracetracking.TapBarFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_save"></fragment>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/bg_button_green"
        android:text="Save"
        android:layout_marginBottom="50dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Profile"
        app:layout_constraintVertical_bias="0.266">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>
